--- a/center/config/src/main/resources/application.yml
+++ b/center/config/src/main/resources/application.yml
@@ -1,6 +1,8 @@
+
+#服务端口
 server:
   port: 8888
-
+#注册到服务中心
 eureka:
   client:
     serviceUrl:
@@ -10,10 +12,10 @@ spring:
   application:
     name: config-server
   rabbitmq:
-    host: ${RABBIT_MQ_HOST:localhost}
+    host: ${RABBIT_MQ_HOST:198.13.45.205}
     port: ${RABBIT_MQ_PORT:5672}
-    username: ${RABBIT_MQ_USERNAME:guest}
-    password: ${RABBIT_MQ_PASSWORD:guest}
+    username: ${RABBIT_MQ_USERNAME:jean}
+    password: ${RABBIT_MQ_PASSWORD:123456}
   cloud:
     config:
       server:
