--- a/center/eureka/src/main/resources/application.yml
+++ b/center/eureka/src/main/resources/application.yml
@@ -1,8 +1,10 @@
+#服务端口
 server:
   port: ${EUREKA_PORT:8761}
 
 eureka:
   client:
+    # 避免服务注册自己
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
@@ -12,7 +14,7 @@ spring:
   application:
     name: eureka-server
   rabbitmq:
-    host: ${RABBIT_MQ_HOST:localhost}
+    host: ${RABBIT_MQ_HOST:198.13.45.205}
     port: ${RABBIT_MQ_PORT:5672}
-    username: ${RABBIT_MQ_USERNAME:guest}
-    password: ${RABBIT_MQ_PASSWORD:guest}
+    username: ${RABBIT_MQ_USERNAME:jean}
+    password: ${RABBIT_MQ_PASSWORD:123456}
