--- a/monitor/hystrix-dashboard/src/main/resources/application.yml
+++ b/monitor/hystrix-dashboard/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
   application:
     name: hystrix-dashboard
   rabbitmq:
-    host: ${RABBIT_MQ_HOST:localhost}
+    host: ${RABBIT_MQ_HOST:198.13.45.205}
     port: ${RABBIT_MQ_PORT:5672}
-    username: ${RABBIT_MQ_USERNAME:guest}
-    password: ${RABBIT_MQ_PASSWORD:guest}
+    username: ${RABBIT_MQ_USERNAME:jean}
+    password: ${RABBIT_MQ_PASSWORD:123456}
 
 management:
   endpoints:
