--- a/center/pom.xml
+++ b/center/pom.xml
@@ -18,8 +18,7 @@
     </parent>
 
     <modules>
-        <module>bus</module>
-        <module>config</module>
+        <module>config-bus-server</module>
         <module>eureka</module>
     </modules>
 </project>
