在demo中增加使用springCloudConfig的例子

--- a/demos/demo/src/main/resources/bootstrap.yml
+++ b/demos/demo/src/main/resources/bootstrap.yml
@@ -3,6 +3,7 @@ spring:
     name: user
   cloud:
     config:
+      uri: http://localhost:8888/
       name: eureka-user
       label: master
       profile: test
