--- a/demos/demo/src/main/resources/application.yml
+++ b/demos/demo/src/main/resources/application.yml
@@ -8,21 +8,21 @@ eureka:
 
 spring:
   rabbitmq:
-    host: ${RABBIT_MQ_HOST:198.13.45.205}
+    host: ${RABBIT_MQ_HOST:39.108.153.211}
     port: ${RABBIT_MQ_PORT:5672}
     username: ${RABBIT_MQ_USERNAME:jean}
     password: ${RABBIT_MQ_PASSWORD:123456}
   redis:
-    host: ${REDIS_HOST:198.13.45.205}
+    host: ${REDIS_HOST:39.108.153.211}
     port: ${REDIS_PORT:6379}
     lettuce:
       pool:
         max-active: 300
     password: ${REDIS_PASSWORD:56155481}
   datasource:
-    url: jdbc:${DATASOURCE_DB:mysql}://${DATASOURCE_HOST:198.13.45.205}:${DATASOURCE_PORT:3306}/springCloud
-    username: ${DATASOURCE_USERNAME:root}
-    password: ${DATASOURCE_PASSWORD:zjp123}
+    url: jdbc:${DATASOURCE_DB:mysql}://${DATASOURCE_HOST:39.108.153.211}:${DATASOURCE_PORT:3306}/springCloud
+    username: ${DATASOURCE_USERNAME:test}
+    password: ${DATASOURCE_USERNAME:Jean123.456}
     driver-class-name: ${DATASOURCE_DRIVER:com.mysql.cj.jdbc.Driver}
 
   zipkin:
@@ -77,4 +77,4 @@ mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   #输出sql执行语句
   configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+                log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
