--- a/gateway/gateway-web/pom.xml
+++ b/gateway/gateway-web/pom.xml
@@ -4,18 +4,42 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.springboot.cloud</groupId>
-    <artifactId>bus-server</artifactId>
+    <artifactId>gateway-web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>bus-server</name>
-    <description>Demo project for Spring Cloud Bus Server</description>
+    <name>gateway-web</name>
+    <description>Demo Gateway Api project for Spring Boot</description>
 
     <parent>
         <groupId>com.springboot.cloud</groupId>
-        <artifactId>center</artifactId>
+        <artifactId>gateway</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
+    <dependencies>
+        <!--api网关-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+        <!--redis限流-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.springboot.cloud</groupId>
+            <artifactId>core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <!--网关签权客户端-->
+        <dependency>
+            <groupId>com.springboot.cloud</groupId>
+            <artifactId>authentication-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -40,5 +64,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
