--- a/gateway/gateway-admin/src/main/resources/application.yml
+++ b/gateway/gateway-admin/src/main/resources/application.yml
@@ -1,14 +1,4 @@
-server:
-  port: 8445
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://${EUREKA_ZONE_HOST:localhost}:${EUREKA_ZONE_PORT:8761}/eureka/
-
 spring:
-  application:
-    name: gateway-admin
   rabbitmq:
     host: ${RABBIT_MQ_HOST:39.108.153.211}
     port: ${RABBIT_MQ_PORT:5672}
@@ -39,6 +29,12 @@ management:
     web:
       exposure:
         include: '*'
+    health:
+      sensitive: false #关闭过滤敏感信息
+  endpoint:
+    health:
+      show-details: ALWAYS  #显示详细信息#暴露所有端点
+
 
 logging:
   level:
