--- a/gateway/gateway-web/src/test/resources/application.yml
+++ b/gateway/gateway-web/src/test/resources/application.yml
@@ -32,3 +32,8 @@ management:
     web:
       exposure:
         include: '*'
+    health:
+      sensitive: false #关闭过滤敏感信息
+  endpoint:
+    health:
+      show-details: ALWAYS  #显示详细信息
