--- a/auth/authentication-server/src/main/resources/application.yml
+++ b/auth/authentication-server/src/main/resources/application.yml
@@ -1,14 +1,4 @@
-server:
-  port: 8001
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://${EUREKA_ZONE_HOST:localhost}:${EUREKA_ZONE_PORT:8761}/eureka/
-
 spring:
-  application:
-    name: authentication-server
   rabbitmq:
     host: ${RABBIT_MQ_HOST:39.108.153.211}
     port: ${RABBIT_MQ_PORT:5672}
@@ -53,6 +43,11 @@ management:
     web:
       exposure:
         include: '*'
+    health:
+      sensitive: false #关闭过滤敏感信息
+  endpoint:
+    health:
+      show-details: ALWAYS  #显示详细信息
 
 mybatis:
   configuration:
