--- a/monitor/admin/src/main/resources/application.yml
+++ b/monitor/admin/src/main/resources/application.yml
@@ -1,22 +1,31 @@
 server:
   port: 8022
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://${EUREKA_ZONE_HOST:localhost}:${EUREKA_ZONE_PORT:8761}/eureka/
-  #spring boot admin设置权限，故需要通过账号密码获取注册信息
-  instance:
-    metadata-map:
-      user.name: admin
-      user.password: 123456
-      #健康检查
-#    health-check-url-path: /actuator/health
-#    lease-renewal-interval-in-seconds: 10
-
 spring:
   application:
     name: admin
+  cloud:
+    nacos:
+      #nacos服务发现
+      #nacos服务发现
+      discovery:
+        server-addr: ${REGISTER_HOST:localhost}:${REGISTER_PORT:8848}
+#        namespace: 5543b251-72a5-4f6c-8607-f6ba4d691d67
+        #访问springBootAdmin的账号密码
+        metadata:
+          user:
+            name: admin
+            password: 123456
+#        namespace: 5543b251-72a5-4f6c-8607-f6ba4d691d67
+        #访问springBootAdmin的账号密码
+        metadata:
+          user:
+            name: admin
+            password: 123456
+        metadata:
+          user:
+            name: admin
+            password: 123456
   rabbitmq:
     host: ${RABBIT_MQ_HOST:39.108.153.211}
     port: ${RABBIT_MQ_PORT:5672}
@@ -50,6 +59,7 @@ spring:
 #        mail:
 #          to: ${MAIL_TO:976235684@qq.com}
 #          from: ${MAIL_FROM:rubyjing0815@163.com}
+
 #日志相关配置
 logging:
   level:
