--- a/webapps/pom.xml
+++ b/webapps/pom.xml
@@ -63,13 +63,14 @@
     </dependencies>
 
     <build>
+        <!-- 以下配置用于生成api-docs -->
         <plugins>
             <plugin>
                 <groupId>io.github.swagger2markup</groupId>
                 <artifactId>swagger2markup-maven-plugin</artifactId>
-                <version>1.3.4</version>
+                <version>1.3.7</version>
                 <configuration>
-                    <swaggerInput>http://localhost:8001/v2/api-docs</swaggerInput>
+                    <swaggerInput>http://localhost:8011/v2/api-docs</swaggerInput>
                     <outputDir>src/main/docs/asciidoc/generated</outputDir>
                     <config>
                         <swagger2markup.markupLanguage>ASCIIDOC</swagger2markup.markupLanguage>
@@ -80,11 +81,24 @@
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
-                <version>1.5.6</version>
+                <version>2.0.0-RC.1</version>
+                <!-- Include Asciidoctor PDF for pdf generation -->
+                <dependencies>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-pdf</artifactId>
+                        <version>1.5.0-alpha.18</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.jruby</groupId>
+                        <artifactId>jruby-complete</artifactId>
+                        <version>9.2.7.0</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <sourceDirectory>src/main/docs/asciidoc/generated</sourceDirectory>
-                    <outputDirectory>src/main/gst/asciidoc/html</outputDirectory>
-                    <backend>html</backend>
+                    <!--<outputDirectory>src/main/gst/asciidoc/html</outputDirectory>-->
+                    <!--<backend>html</backend>-->
                     <sourceHighlighter>coderay</sourceHighlighter>
                     <attributes>
                         <doctype>book</doctype>
@@ -96,6 +110,33 @@
                         <sectanchors></sectanchors>
                     </attributes>
                 </configuration>
+                <!-- Since each execution can only handle one backend, run
+                    separate executions for each desired output type -->
+                <executions>
+                    <execution>
+                        <id>output-html</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>html5</backend>
+                            <outputDirectory>src/main/docs/asciidoc/html</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>output-pdf</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>pdf</backend>
+                            <outputDirectory>src/main/docs/asciidoc/pdf</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+
             </plugin>
         </plugins>
     </build>
