--- a/auth/authorization-server/pom.xml
+++ b/auth/authorization-server/pom.xml
@@ -28,17 +28,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-security</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-databind</artifactId>-->
-            <!--<version>2.9.9.2</version>-->
-            <!--<scope>compile</scope>-->
-        <!--</dependency>-->
-        <!-- 解析json -->
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.0.pr1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
