--- a/common/web/pom.xml
+++ b/common/web/pom.xml
@@ -41,17 +41,12 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.0.4.RELEASE</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-databind</artifactId>-->
-            <!--<version>2.9.9.2</version>-->
-        <!--</dependency>-->
-        <!-- 解析json -->
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.0.pr1</version>
         </dependency>
+
         <!--mybatis plus依赖包-->
         <dependency>
             <groupId>com.baomidou</groupId>
